Create use case to list all rentals created by a user
- Add authentication to the Swagger docs
