# src/modules/cars/infra/http/routes/categories.routes.ts
@@ -6,6 +6,8 @@ import { makeUploadStorage } from '@config/upload';
 import { CreateCategoryHandler } from '@modules/cars/useCases/createCategory/CreateCategoryHandler';
 import { ImportCategoryHandler } from '@modules/cars/useCases/importCategory/ImportCategoryHandler';
 import { ListCategoriesHandler } from '@modules/cars/useCases/listCategories/ListCategoriesHandler';
+import { ensureAdmin } from '@shared/infra/http/middlewares/ensureAdmin';
+import { ensureAuthenticated } from '@shared/infra/http/middlewares/ensureAuthenticated';
 
 export const categoriesRoutes = Router();
 
@@ -15,6 +17,9 @@ const listCategoriesHandler = new ListCategoriesHandler();
 const createCategoryHandler = new CreateCategoryHandler();
 const importCategoryHandler = new ImportCategoryHandler();
 
+categoriesRoutes.use(ensureAuthenticated);
 categoriesRoutes.get('/', listCategoriesHandler.handle);
+
+categoriesRoutes.use(ensureAdmin);
 categoriesRoutes.post('/', createCategoryHandler.handle);
 categoriesRoutes.post('/import', uploadCategory.single('file'), importCategoryHandler.handle);
